--- a/template/base.html
+++ b/template/base.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="title icon" href="img/title-img.png">
+    <link rel="title icon" href="images/title-img.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css')}}">
     <title>Admin Dashboard</title>
   </head>
   <body>
@@ -20,24 +20,25 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <div class="container-fluid">
           <div class="row">
-            
             <!-- sidebar -->
             <div class="col-xl-2 col-lg-3 col-md-4 sidebar fixed-top">
               <a href="#" class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 bottom-border">ICT239 SUSS</a>
               {% if current_user.is_authenticated %}
               <div class="bottom-border pb-3">
-                <img src="img/admin.jpeg" width="50" class="rounded-circle mr-3">
+                <img src="{{ url_for('static', filename='img/admin.jpeg')}}" width="50" class="rounded-circle mr-3">
                 <a href="#" class="text-white">{{ name }} </a>
               </div>
               {% endif %}
               <ul class="navbar-nav flex-column mt-4">
                 {% if not current_user.is_authenticated %}
-                <li class="nav-item"><a href="login.html" class="nav-link text-white p-3 mb-2 sidebar-link"><i class="fas fa-home text-light fa-lg mr-3"></i>Login</a></li>
+                <li class="nav-item"><a href="login" class="nav-link text-white p-3 mb-2 sidebar-link"><i class="fas fa-home text-light fa-lg mr-3"></i>Login</a></li>
                 <li class="nav-item"><a href="register" class="nav-link text-white p-3 mb-2 sidebar-link"><i class="fas fa-user text-light fa-lg mr-3"></i>Register</a></li>
                 {% else %}
                 <li class="nav-item"><a href="dashboard" class="nav-link text-white p-3 mb-2 sidebar-link"><i class="fas fa-chart-area text-light fa-lg mr-3"></i>Dashboard</a></li>
                 <li class="nav-item"><a href="log" class="nav-link text-white p-3 mb-2 sidebar-link"><i class="fas fa-address-card text-light fa-lg mr-3"></i>Log</a></li>
+                {% if current_user.email == "admin@abc.com" %}
                 <li class="nav-item"><a href="upload" class="nav-link text-white p-3 mb-2 sidebar-link"><i class="fas fa-cloud-upload-alt text-light fa-lg mr-3"></i>Upload</a></li>
+                {% endif %}
               {% endif %}
               </ul>
             </div>
