--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -14,7 +14,7 @@ body {
 /* navbar */
 .sidebar {
     height: 100vh;
-    background: linear-gradient(rgba(70, 64, 156, 0.548), rgba(0, 0, 0, .9)), url(../img/img1.jpeg);
+    background: linear-gradient(rgba(70, 64, 156, 0.548), rgba(0, 0, 0, .9)), url(../img/img1.jpeg); /* links to the image for the background */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -32,6 +32,14 @@ body {
 .sidebar-link:hover {
     background-color: #444;
     border-radius: 5px;
+}
+
+.sidebar-item-padding {
+    padding-left: 5px;
+}
+
+.top-navbar {
+    height: 20%;
 }
 
 .current {
@@ -89,17 +97,21 @@ body {
 }
 
 @media (max-width: 768px) {
-.sidebar {
-    position: static;
-    height: auto;
-}
-}
 
-.top-navbar {
-    position: static;
-    background: linear-gradient(rgba(167, 165, 202, 0.548), rgba(53, 27, 87, 0.377)), url(../img/img1.jpeg);
-}
+    .row {
+        position: static;
+    }
 
+    .sidebar {
+        position: static;
+        height: auto;
+    }
+
+    .top-navbar {
+        position: static;
+        background: linear-gradient(rgba(167, 165, 202, 0.548), rgba(53, 27, 87, 0.377)), url(../img/img1.jpeg);
+    }
+}
 /* end of navbar */
 
 /* cards */
